# rfq-agent

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  main.py  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: conflicting-not-flagged.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/web/: Dockerfile  next.config.mjs  package.json
data/: rfq.json  rfq.md  vendor_cheap.json  vendor_fluff.json  vendor_thorough.json
docs/: assignment.md  write-up.md
docs/architecture/: ai-pipeline-diagram.md  deployment.md  system-diagram.md
docs/demo/: demo-script.md
docs/design/: design.md
docs/prompts/: clarification-doc.md  comparison-doc.md  data-generation.md  extraction-prompt-doc.md  messy-data-gen-doc.md  prompt-04-failure-example.md  rfq-gen-doc.md  ui-ux-gen-doc.md  vendor-gen-doc.md
docs/qa/: 04-comparison-uat.md  comparison_e2e_live.py  phase-02-functional-checklist.md  phase2_api_smoke.py  phase2_e2e.py  phase5-UAT.md  phase5-playwright.spec.ts
docs/traces/: comparison_trace_1.json  comparison_trace_1.md  comparison_trace_2.json  comparison_trace_2.md  trace_adversarial_fixture.json  trace_adversarial_fixture.md  (+6 more)
infrastructure/: docker-compose.yml  rfq.sh
services/ai/: .dockerignore  Dockerfile  __init__.py  pyproject.toml
services/ai/agents/: __init__.py  _demo.py  comparison.py  extraction.py  rfq_gen.py  vendor_gen.py
services/ai/api/: __init__.py  app.py
services/ai/grounding/: __init__.py  gate.py  report.py
services/ai/llm/: __init__.py  factory.py
services/ai/prompts/: __init__.py  clarification.v1.md  comparison.v1.md  extraction.v1.md  messy-data-gen.v1.md  registry.py  rfq-gen.v1.md  ui-ux-gen.v1.md  vendor-gen.v1.md
services/ai/schemas/: __init__.py  domain.py  envelope.py  events.py
services/ai/scripts/: __init__.py  capture_comparison_trace.py  capture_traces.py  codegen.py  generate_samples.py  verify_access.py
services/ai/tests/: conftest_comparison.py  conftest_extraction.py  test_codegen_drift.py  test_comparison_agent.py  test_extraction_agent.py  test_field_envelope.py  test_file_extract.py  test_grounding_gate.py  test_health.py  test_input_wrap.py  test_llm_factory.py  test_prompt_registry.py  test_prompts_api.py  test_sample_fixtures.py  test_sse_demo.py
(+151 files in other folders)
