[project]
name = "aerchain-ai"
version = "0.1.0"
description = "Bid Desk AI service — FastAPI + LangGraph extraction and comparison agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "langgraph>=1.2.6",
    "langchain>=0.3.0",
    "langchain-openai>=1.3.3",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "sse-starlette>=3.4.5",
    "python-frontmatter>=1.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pydantic-to-typescript==2.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
